# agent-rllib

./: .env.example  .gitignore  CITATIONS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: ppo_default.yaml
data/corpus/: articles.jsonl
data/tasks/: eval_tasks.jsonl
examples/: basic_training.py
scripts/: benchmark.py
src/agent_rllib/: __init__.py
src/agent_rllib/agents/: __init__.py  ppo_agent.py
src/agent_rllib/envs/: __init__.py  supportbot_env.py
src/agent_rllib/tools/: __init__.py  registry.py
src/tests/: test_env.py
